@@ -10,6 +10,12 @@ Release
 *.asm
 Makefile
 tcl.hpj
-tclConfig.sh
+tkConfig.sh
 nmakehlp.exe
 .#*
+*.dll
+*.a
+*.exe
+*.manifest
+config.cache
+config.status
